--- a/ViewsPrototype/homePage.html
+++ b/ViewsPrototype/homePage.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LYninG</title>
+    <link type="text/css" href="./css/css.css">
 </head>
 <body>
+
+
 
 </body>
 </html>
